...

            <TextView
                android:id="@+id/createEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/createEventPosterPreview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/createEventPosterStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/createEventTitleInput"
                android:layout_width="match_parent"
                android:layout_height="56dp"
...

            <EditText
                android:id="@+id/createEventDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="140dp"
...

            <EditText
                android:id="@+id/createEventLocationInput"
                android:layout_width="match_parent"
                android:layout_height="56dp"
...

            <EditText
                android:id="@+id/createEventMaxParticipantsInput"
                android:layout_width="match_parent"
                android:layout_height="56dp"
...

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createEventDeadlineButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
...

            <TextView
                android:id="@+id/createEventDeadlineValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createEventDateButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
...

            <TextView
                android:id="@+id/createEventDateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/createEventGeolocationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/createEventPublicSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createEventSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="76dp"
...
