...
            android:textColor="#F4F1F1"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/qrHeaderGuide"
        app:layout_constraintBottom_toTopOf="@id/qrCodeBack"
        app:layout_constraintStart_toStartOf="parent"
...
